--- a/public/login.html
+++ b/public/login.html
@@ -16,31 +16,11 @@
 			<h2>
                 <form ng-submit="login()">
                     <legend><h2>Veuillez selectionner votre profil :</h2></legend>
-                    <SELECT name="nom" size="1" ng-repeat="x in users">
-                        {{x.username}}
-                    </SELECT><br><br>
-
+                    <select name="repeatSelect" id="repeatSelect" ng-model="user.username">
+                        <option ng-repeat="x in users" value="{{x.username}}">{{x.username}}</option>
+                    </select><br><br>
                     <button type="summit" class="btn btn-primary"><h2>Connexion</h2></button>
                 </form>
-                <div ng-repeat="x in users">
-                    <p>{{x}}</p>
-                    {{x.username}}
-                </div>
-                <!--ul class="list-group card-text">
-                        <li class="d-flex justify-content-between align-items-center"
-                        ng-repeat="x in users">
-                        {{x.username}}
-                        <button type="button" class="close supp" aria-label="Close"
-                            ng-click="removeCollaborator(x._id, collaborator)"
-                            ng-show="x.author == user.username">
-                            <span aria-hidden="true"><i class="fas fa-minus"></i></span>
-                        </button>
-                    </li>
-                    </ul>
-                    <ul class="list-group" ng-repeat="x in users | orderBy:'id':true">
-                            <li class="list-group-item">{{x.username}}
-                                </li>
-                    </ul-->
             </h2>
 		</div>
     </main>
