--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,7 @@
 			<h2>
 				Vous allez pouvoir tester votre acuité visuelle !<br><br>
 			</h2>
-			<a class="btn btn-primary" href="./"><h2>Démarrer le test</h2></a><br>
+			<a class="btn btn-primary" href="./test.html"><h2>Démarrer le test</h2></a><br>
 		</div>
     </main>
 </div>
