--- a/public/test.html
+++ b/public/test.html
@@ -8,6 +8,10 @@
     </head>
     <body>
         
-        <div id="affichage_lettre"></div>
+        <div id="affichage_lettre"> go !  </div>
+        <script> 
+            next_letter(tailles[line]);
+            startReco();
+                </script>
     </body>
 </html>
