--- a/public/register.html
+++ b/public/register.html
@@ -26,4 +26,14 @@
             </h2>
 		</div>
     </main>
+    
+    <!-- Pied de Page -->
+    <footer class="bg-dark text-light">
+            <span id="copyright">
+                &copy;
+                <script>
+                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+                </script> - Bastien ROURE & Tao VU HOAI
+            </span>
+        </footer>
 </div>
