--- a/public/stats.html
+++ b/public/stats.html
@@ -14,10 +14,9 @@
     <main class="bg-white">
 		<div id="mainid">
 			<h2>
-				Vous allez pouvoir tester votre acuité visuelle !<br><br>
+				Historique des tests de {{user.username}} :<br><br>
             </h2>
-            <button class="btn btn-primary" type="button" ng-click="testurl()"><h2>Démarrer le test</h2></button><br><br>
-            <button class="btn btn-primary" type="button" ng-click="statsurl()"><h2>Historique</h2></button><br>
+            <button class="btn btn-primary" type="button" ng-click="homeurl()"><h2>Accueil</h2></button><br>
 		</div>
     </main>
 
