--- a/public/test.html
+++ b/public/test.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-      <title></title>
-      <meta charset="utf-8">
-      <script src="js/speech.js"></script>
-      <link rel="stylesheet" type="text/css" href="css/test.css">
-    </head>
-    <body>
-        
-        <div id="affichage_lettre"> go !  </div>
-        <script> 
-            next_letter(tailles[line]);
-            startReco();
-                </script>
-    </body>
-</html>
+<div ng-controller="userCtrl">
+    <main>
+        <div id="affichage_lettre"  ng-init=teststart();> go !  </div>
+    </main>
+</div>
