--- a/public/home.html
+++ b/public/home.html
@@ -14,7 +14,12 @@
     <main class="bg-white">
 		<div id="mainid">
 			<h2>
-				Vous allez pouvoir tester votre acuité visuelle !<br><br>
+                Vous allez pouvoir tester votre acuité visuelle !<br>
+                 Nous allons commencer par l'oeil droit, veuilez cachez votre oeil gauche<br>
+                 Eteignez les lumieres, placez vous à 40 cm de l'ecran<br>
+                 Des lettres vont apparaitre, enoncez les de maniere distincte ! <br>
+
+                <br><br>
             </h2>
             <button class="btn btn-primary" type="button" ng-click="testurl()"><h2>Démarrer le test</h2></button><br><br>
             <button class="btn btn-primary" type="button" ng-click="statsurl()"><h2>Historique</h2></button><br>
