--- a/public/test.html
+++ b/public/test.html
@@ -1,5 +1,5 @@
-<div ng-controller="userCtrl">
+<div div id="ctrlforjs" ng-controller="userCtrl" ng-init="goodurl()">
     <main>
-        <div id="affichage_lettre"  ng-init=teststart();> go !  </div>
+        <div id="affichage_lettre" ng-init=teststart();> go !  </div>
     </main>
 </div>
