--- a/public/home.html
+++ b/public/home.html
@@ -1,20 +1,31 @@
-<div ng-controller="userCtrl">
+<div ng-controller="userCtrl" ng-init="goodurl()">
 	<!-- Tête de Page -->
     <nav class="navbar bg-dark text-light">
-            <a class="navbarbrand">
-                <h2>Bienvenue {{user.username}}</h2>
-            </a>
-            <div class='my-2 my-sm-0'>
-                <button class="btn btn-danger my-2 my-sm-0" type="button"
+        <div id="navdivleft">
+            <h2>Bienvenue {{user.username}}</h2>
+        </div>
+        <div id="navdivcenter">
+            <button class="btn btn-dark my-2 my-sm-0" type="button"
+            ng-click="homeurl()"><h2>SIGHT STUDY APP</h2></button>
+        </div>
+        <div class='my-2 my-sm-0' id="navdivright">
+            <button class="btn btn-primary my-2 my-sm-0" type="button" 
+            ng-click="homeurl()">Accueil</button>
+            <button class="btn btn-danger my-2 my-sm-0" type="button"
             ng-click="logout()">D&eacute;connexion</button>
-            </div>
-        </nav>
+        </div>
+    </nav>
 
 	<!-- Corps de Page -->
     <main class="bg-white">
 		<div id="mainid">
 			<h2>
-				Vous allez pouvoir tester votre acuité visuelle !<br><br>
+                Vous allez pouvoir tester votre acuit&eacute; visuelle !<br>
+                Nous allons commencer par l'&oelig;il droit, veuillez cacher votre &oelig;il gauche (<i class="fas fa-eye"></i><i class="fas fa-eye-slash"></i>)<br>
+                &Eacute;teignez les lumi&egrave;res, placez vous &agrave; 40 cm de l'&eacute;cran<br>
+                Des lettres vont appara&icirc;tre, &eacute;noncez les de mani&egrave;re distincte ! <br>
+
+                <br><br>
             </h2>
             <button class="btn btn-primary" type="button" ng-click="testurl()"><h2>Démarrer le test</h2></button><br><br>
             <button class="btn btn-primary" type="button" ng-click="statsurl()"><h2>Historique</h2></button><br>
@@ -23,11 +34,10 @@
 
     <!-- Pied de Page -->
     <footer class="bg-dark text-light">
-            <span id="copyright">
-                &copy;
-                <script>
-                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script> - Bastien ROURE & Tao VU HOAI
-            </span>
-        </footer>
+        <div>
+            &copy;
+            <span id="copyright" ng-init="copyright()"></span>
+            - Bastien ROURE & Tao VU HOAI
+        </div>
+    </footer>
 </div>
