--- a/public/home.html
+++ b/public/home.html
@@ -20,7 +20,7 @@
     <main class="bg-white">
 		<div id="mainid">
 			<h2>
-                Vous allez pouvoir tester votre acuit&eacute; visuelle !<br>
+                Vous allez pouvoir tester votre acuit&eacute; visuele !<br>
                 Nous allons commencer par l'&oelig;il droit, veuillez cacher votre &oelig;il gauche (<i class="fas fa-eye"></i><i class="fas fa-eye-slash"></i>)<br>
                 &Eacute;teignez les lumi&egrave;res, placez vous &agrave; 40 cm de l'&eacute;cran<br>
                 Des lettres vont appara&icirc;tre, &eacute;noncez les de mani&egrave;re distincte ! <br>
