--- a/public/home.html
+++ b/public/home.html
@@ -2,7 +2,7 @@
 	<!-- Tête de Page -->
     <nav class="navbar bg-dark text-light">
         <div id="navdivleft">
-            <h2>Bienvenue {{user.username}}</h2>
+            <h2>Bienvenue {{user.username}} {{pass}}</h2>
         </div>
         <div id="navdivcenter">
             <button class="btn btn-dark my-2 my-sm-0" type="button"
