--- a/public/register.html
+++ b/public/register.html
@@ -1,4 +1,4 @@
-<div ng-controller="userCtrl">
+<div ng-controller="userCtrl" ng-init="registerurl()">
     <!-- Tête de Page -->
     <nav class="navbar bg-dark text-light">
         <div id="navdivleft">
